# linux-sh

./: README.md  index.html
develop_debug/: index.html
develop_debug/sheblon/: conf-lang.sh  constructor.sh  index.html  src.txt
develop_debug/sheblon/config/: index.html  lang.conf  variables.sh
develop_debug/sheblon/lang/: index.html  russian.trans
develop_debug/sheblon/modules/: chrootcheck.sh  index.html  startfine.sh
develop_debug/sheblon/work/: index.html
l_sh_image/: index.html
l_sh_primers/: 1_l_sh_parameters-command_ansi.txt  1_l_sh_parameters-command_utf8.txt  2_l_sh_if-else-case_ansi.txt  2_l_sh_if-else-case_utf8.txt  3_l_sh_read_ansi.txt  3_l_sh_read_utf8.txt  4_l_sh_while-for_ansi.txt  4_l_sh_while-for_utf8.txt  5_l_sh_function_ansi.txt  5_l_sh_function_utf8.txt  Select_Menu_ansi.txt  Select_Menu_utf8.txt  bash_dialog_progresssbox-gauge_ansi.txt  bash_dialog_progresssbox-gauge_utf8.txt  conveer_ansi.txt  conveer_utf8.txt  dialog_ansi.txt  dialog_man_ansi.txt  dialog_man_utf8.txt  dialog_utf8.txt  index.html  l_sh_trap-command_color-bash_ansi.txt  l_sh_trap-command_color-bash_utf8.txt  sh_ethernet_ansi.txt  sh_ethernet_utf8.txt
l_sh_test/: Select_Menu_Internal.sh  Select_Menu_external.sh  Select_Menu_primer.sh  bash_dialog_progresssbox-gauge.sh  bash_jumto-goto.sh  dialog-1.sh  dialog-2.sh  dialog-form.sh  dialog.sh  dialogs.sh  dmenu.sh  index.html  key.sh  key2.sh  key3.sh  key4.sh  key5.sh  network-test.sh  network.sh  network0.sh  sh.sh  sw (2).sh  sw.sh  test.sh  user-menu-1.sh
l_sh_test/umount-usb_old/: index.html  options.conf  umount-usb-2.sh_old.backup  umount-usb-config.sh  umount-usb.sh
l_sh_test/umount-usb_old/language/: dutch.lng  english.lng  index.html  italian.lng  polish.lng  portuguese.lng
l_sh_test/usb_devices_old/: index.html  options.backup  options.conf  umount-usb-config.sh  umount-usb.sh
l_sh_test/usb_devices_old/language/: danish.lng  french.lng  german.lng  greek.lng  hungarian.lng  index.html  russian.lng  turkish.lng
l_sh_work/: Makefile  Makefile_detect_OS.docx  Makefile_detect_OS.txt  Makefile_my_detect_os.txt  PKGBUILD.proto.txt  Python_Training.7z  Register_String_ansi.txt  Register_String_utf8.txt  all-mirrorlist.txt  arch-root_vs_pacman-root_ansi.txt  arch-root_vs_pacman-root_utf8.txt  auto_array_packages.sh  base-packages.txt  bash-key-keyboard-example.sh  bash-string-to-center.sh  bash_del_probel_start_string_ansi.txt  bash_del_probel_start_string_utf8.txt  bash_math_decimal_fraction_ansi.txt  bash_math_decimal_fraction_utf8.txt  bash_source.txt  check_package_please-wait.sh  check_packages_pacman.sh  crypt-decrypt_readme.txt  custom-conf.sh  custom-repo_ansi.txt  del_finish_string_slesh-n_ansi.txt  del_finish_string_slesh-n_utf8.txt  dhcpcd.txt  dialog-xdialog-maximize.sh  dialogrc  dialogrc-conf.sh  dialogrc-conf_test.sh  dialogrc_ansi.txt  dialogrc_utf8.txt  dm.sh  dynamic_description.sh  expand-lng.sh  expand-modules.sh  find-exec-cp_ansi.txt  find-exec-cp_utf8.txt  (+79 more)
l_sh_work/CPP_Result_commands_to_Variables/: CMakeLists.txt  Readme_CPP-Result.txt  index.html  main.cpp
l_sh_work/CPP_Result_commands_to_Variables/src/: index.html  main_win_x64.cpp  main_win_x86.cpp
l_sh_work/CPP_Result_commands_to_Variables/test/: CMakeLists.txt  index.html  main.cpp  test.pro
l_sh_work/CPP_Result_commands_to_Variables/test/src/: index.html  main_unix.cpp  main_win_x64.cpp  main_win_x86.cpp
l_sh_work/CPP_Training/cpp-webview/: Makefile  gl-wv-build.txt  webview-example
l_sh_work/C_Training/: atoi  atoi.c  buffer-name  buffer-name.c  command  command.c  fputc-fgetc  fputc-fgetc.c  getopt-example  getopt-example.c  gnu-basename  gnu-basename.c  homedir  homedir.c  macros2  macros2.c  macroses  macroses.c  main  popen  popen.c  self-name-popen  self-name-popen.c  self-name-popen2  self-name-popen2.c  socket  socket.c  sprintf  sprintf.c  sprintf_example  sprintf_example.c  void-buff-char  void-buff-char.c
l_sh_work/C_Training/Not-Verified-Teaching/: loockefile-readme.txt  loockfile  loockfile.c
l_sh_work/C_Training/c-webview/: c-w-build.txt  webview-example
l_sh_work/C_Training/c_exec/: c_exec_readme.doc  c_exec_readme.docx  c_exec_readme.htm
l_sh_work/GTK_Training/: GtkTreeView-GtkListStore-Glade.7z  entry.glade~  test.sh
l_sh_work/GTK_Training/GTK_TreeView/: Makefile  (+2 more)
l_sh_work/GoLang_Training/: Extending_Python_in_Golang.doc  Extending_Python_in_Golang.docx  Extending_Python_in_Golang.html  GoLang_CrossCompile.txt  GoLang_Dynamic_Library.txt  GoLang_Optimize.txt  GoLang_os_exec.txt  Python_plus_Golang.txt  golang_output_command.txt  index.html  no-required-module-package-github.txt
l_sh_work/XDM/: Xservers  index.html  xorg.conf
l_sh_work/archiso_txt/: archiso.txt  archiso_my_pkg_ansi.txt  archiso_my_pkg_utf8.txt  archiso_pkg_version_2_ansi.txt  archiso_pkg_version_2_utf8.txt  base_base-devel_ansi.txt  base_base-devel_utf8.txt  dump.dconf  dump_reedme.txt  index.html  session_no-save_ansi.txt  session_no-save_utf8.txt  standart-pkg_ansi.txt  standart-pkg_utf8.txt  user-groups-description_out-txt.sh  usergroups.txt  xorg_ansi.txt  xorg_utf8.txt
l_sh_work/customrepo_reedme/: custom-repo_utv8.txt  index.html
l_sh_work/cut_in_array_pkg_name/: ciapn_ansi.txt  ciapn_utf8.txt  index.html
l_sh_work/fail2ban_and_blacklist/: fail2ban-actions.sh  filter.txt  filters-actions.txt  handle-example-2.py  handle-example.py  ip.blacklist  nftable-readme-2.txt  nftable-readme.txt  nftables-example.txt  primer.txt
l_sh_work/golang-library_python-ctypes-cdll/: genrsa_lib.go  genrsa_lib.h  load-lib.py  test-rsa.py
l_sh_work/language_setup/: index.html  installer-variables.sh  language.sh
l_sh_work/nixscript/: index.html  nixtips.sh  onixtips.sh  primer-1.txt  primer-2.txt  reedme.txt  sshtips.sh  tips.txt  txtips.sh
l_sh_work/notify-send_linux/: index.html  notify-send.doc  notify-send.docx  notify-send.htm  notify-send.rtf  notify-send_simple_ansi.txt  notify-send_simple_utf8.txt
l_sh_work/termux/: index.html  termux_reedme_ansi.txt  termux_reedme_utf8.txt
l_sh_work/work_master/: index.html  temp-log.txt
(+151 files in other folders)
